--- a/OpenFE_showcase_1_RBFE_of_T4lysozyme.ipynb
+++ b/OpenFE_showcase_1_RBFE_of_T4lysozyme.ipynb
@@ -569,8 +569,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "87913c34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Next we create an OpenMM System for the \"old\" (benzene) alchemical endstate\n",
+    "import numpy as np\n",
+    "from openmmforcefields.generators import SMIRNOFFTemplateGenerator\n",
+    "\n",
+    "# first register an ommff generator with the required topology\n",
+    "#smirnoff_benz = SMIRNOFFTemplateGenerator(\n",
+    "#    forcefield=\"openff-2.0.0.offxml\", molecules=[benzene_off])\n",
+    "#omm_forcefield_benz = app.ForceField('amber99sb.xml', 'tip3p.xml')\n",
+    "#omm_forcefield_benz.registerTemplateGenerator(smirnoff_benz.generator)\n",
+    "\n",
+    "# Create Modeller object\n",
+    "old_modeller = Modeller(benzene_top.to_openmm(), benzene_pos)\n",
+    "\n",
+    "# Solvate the complex in a 0.15 mM cubic water box with 1.2 nm from the\n",
+    "# solute to the edges of the box\n",
+    "old_modeller.addSolvent(\n",
+    "    omm_forcefield_benz, model='tip3p', padding=1.2*unit.nanometer,\n",
+    "    ionicStrength=0.15*unit.molar)\n",
+    "\n",
+    "# Create OpenMM system + topology + initial positions for \"old\" system\n",
+    "old_solvent_system = omm_forcefield_benz.createSystem(\n",
+    "                         old_modeller.topology,\n",
+    "                         nonbondedMethod=PME,\n",
+    "                         nonbondedCutoff=0.9 * unit.nanometer,\n",
+    "                         constraints=HBonds,\n",
+    "                         rigidWater=True)\n",
+    "\n",
+    "\n",
+    "old_solvent_topology = old_modeller.getTopology()\n",
+    "\n",
+    "# We center the system by adding (14, 14, 14) [box is ~ 28.6 A per side]\n",
+    "old_solvent_positions = old_modeller.getPositions() + np.array([14, 14, 14]) * unit.angstrom"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e54b2c09",
+   "metadata": {},
+   "source": [
+    "### Creating the \"new\" (phenol) OpenMM Topologies\n",
+    "\n",
+    "From these initial objects defining the benzene system we can create \"new\"\n",
+    "Topologies defining the phenol system.\n",
+    "\n",
+    "Here we use `append_new_topology` (which we hope to move to the main OpenFE\n",
+    "repository eventually), which removes the benzene molecule from the \"old\"\n",
+    "topology and grafts in the phenol molecule topology."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "c0d5d020",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils import setup\n",
+    "\n",
+    "# Essentially we remove the benzene residue from the old topology and graft\n",
+    "# in the new phenol residue\n",
+    "new_complex_topology = setup.append_new_topology_item(old_complex_topology,\n",
+    "                                                      phenol_top.to_openmm(),\n",
+    "                                                      exclude_residue_name=\"benzene\")\n",
+    "\n",
+    "new_solvent_topology = setup.append_new_topology_item(old_solvent_topology,\n",
+    "                                                      phenol_top.to_openmm(),\n",
+    "                                                      exclude_residue_name=\"benzene\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "add5624b",
    "metadata": {},
    "outputs": [],
    "source": []
