Adds factory building

--- a/OpenFE_showcase_1_RBFE_of_T4lysozyme.ipynb
+++ b/OpenFE_showcase_1_RBFE_of_T4lysozyme.ipynb
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 62,
    "id": "7337637c",
    "metadata": {},
    "outputs": [
@@ -559,7 +559,7 @@
     "old_complex_topology = old_modeller.getTopology()\n",
     "\n",
     "# We center the system by adding (30, 30, 30) [box is about 73 A per side]\n",
-    "old_complex_positionspositions = old_modeller.getPositions() + np.array([30, 30, 30]) * unit.angstrom"
+    "old_complex_positions = old_modeller.getPositions() + np.array([30, 30, 30]) * unit.angstrom"
    ]
   },
   {
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 63,
    "id": "87913c34",
    "metadata": {},
    "outputs": [],
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 64,
    "id": "c0d5d020",
    "metadata": {},
    "outputs": [],
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 65,
    "id": "add5624b",
    "metadata": {},
    "outputs": [
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 66,
    "id": "3b6adbbd",
    "metadata": {},
    "outputs": [
@@ -753,10 +753,133 @@
   },
   {
    "cell_type": "markdown",
+   "id": "77c970d2",
+   "metadata": {},
+   "source": [
+    "### Getting the new system positions\n",
+    "\n",
+    "In order to ensure that we can properly transform between the two systems we\n",
+    "need to make sure that all mapped atoms have the same coordinates. To do this\n",
+    "we generate \"new\" coordinates based on those of the \"old\" systems.\n",
+    "\n",
+    "This can be easily done using the mappings between systems obtained above.\n",
+    "\n",
+    "Here `set_and_check_new_positions` copies over the positions of the old system,\n",
+    "removes the positions of the benzene and replaces them with those of the\n",
+    "phenol. We also check that all mapped atoms are within 1e-5 Angstroms of each\n",
+    "other."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "826b708e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Note we use shift_insert to make sure the phenol is shifted in the same\n",
+    "# way we did above to center the coordinates in the box.\n",
+    "new_complex_positions = setup.set_and_check_new_positions(\n",
+    "                            complex_mappings, old_complex_topology,\n",
+    "                            new_complex_topology, old_complex_positions,\n",
+    "                            insert_positions=phenol_pos,\n",
+    "                            shift_insert=np.array([30, 30, 30]))\n",
+    "\n",
+    "new_solvent_positions = setup.set_and_check_new_positions(\n",
+    "                            solvent_mappings, old_solvent_topology,\n",
+    "                            new_solvent_topology, old_solvent_positions,\n",
+    "                            insert_positions=phenol_pos,\n",
+    "                            shift_insert=np.array([14, 14, 14]))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b7faa03",
+   "metadata": {},
+   "source": [
+    "### Creating hybrid topology factories\n",
+    "\n",
+    "Finally we create hybrid topology factories which gather the topology terms\n",
+    "from both the \"old\" and \"new\" systems to create the single topology \"hybrid\".\n",
+    "\n",
+    "Note: HybridTopologyFactory is adapted from Perses, we hope to eventually\n",
+    "move it upstream to openmmtools."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "509ea59a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:\tNumExpr defaulting to 8 threads.\n",
+      "INFO:\tcreating hybrid system\n",
+      "INFO:\tsetting force field terms\n",
+      "INFO:\tadding forces\n",
+      "INFO:\tDONE\n",
+      "INFO:\tcreating hybrid system\n",
+      "INFO:\tsetting force field terms\n",
+      "INFO:\tadding forces\n",
+      "INFO:\tDONE\n"
+     ]
+    }
+   ],
+   "source": [
+    "from utils import relative\n",
+    "\n",
+    "hybrid_complex_factory = relative.HybridTopologyFactory(\n",
+    "                             old_complex_system, old_complex_positions,\n",
+    "                             old_complex_topology,\n",
+    "                             new_complex_system, new_complex_positions,\n",
+    "                             new_complex_topology,\n",
+    "                             old_to_new_atom_map=complex_mappings['old_to_new_atom_map'],\n",
+    "                             old_to_new_core_atom_map=complex_mappings['old_to_new_core_atom_map'],\n",
+    "                             use_dispersion_correction=False,\n",
+    "                             softcore_alpha=0.5,\n",
+    "                             softcore_LJ_v2=True,\n",
+    "                             softcore_LJ_v2_alpha=0.85,\n",
+    "                             softcore_electrostatics=True,\n",
+    "                             softcore_electrostatics_alpha=0.3,\n",
+    "                             softcore_sigma_Q=1.0,\n",
+    "                             interpolate_old_and_new_14s=False,\n",
+    "                             flatten_torsions=False,)\n",
+    "\n",
+    "hybrid_solvent_factory = relative.HybridTopologyFactory(\n",
+    "                             old_solvent_system, old_solvent_positions,\n",
+    "                             old_solvent_topology,\n",
+    "                             new_solvent_system, new_solvent_positions,\n",
+    "                             new_solvent_topology,\n",
+    "                             old_to_new_atom_map=solvent_mappings['old_to_new_atom_map'],\n",
+    "                             old_to_new_core_atom_map=solvent_mappings['old_to_new_core_atom_map'],\n",
+    "                             use_dispersion_correction=False,\n",
+    "                             softcore_alpha=0.5,\n",
+    "                             softcore_LJ_v2=True,\n",
+    "                             softcore_LJ_v2_alpha=0.85,\n",
+    "                             softcore_electrostatics=True,\n",
+    "                             softcore_electrostatics_alpha=0.3,\n",
+    "                             softcore_sigma_Q=1.0,\n",
+    "                             interpolate_old_and_new_14s=False,\n",
+    "                             flatten_torsions=False,)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "58e2643d",
    "metadata": {},
    "source": [
     "## 4. Calculating RBFEs in OpenMM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b210eb02",
+   "metadata": {},
+   "source": [
+    "With our single hybrid topologies generated, we "
    ]
   },
   {
