--- a/OpenFE_showcase_1_RBFE_of_T4lysozyme.ipynb
+++ b/OpenFE_showcase_1_RBFE_of_T4lysozyme.ipynb
@@ -867,6 +867,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "1d59f82e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We'll also add barostats for later use\n",
+    "hybrid_complex_factory.hybrid_system.addForce(openmm.MonteCarloBarostat(1.0, 298.15, 50))\n",
+    "\n",
+    "hybrid_solvent_factory.hybrid_system.addForce(openmm.MonteCarloBarostat(1.0, 298.15, 50))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "58e2643d",
    "metadata": {},
@@ -909,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 73,
    "id": "9a780811",
    "metadata": {},
    "outputs": [
@@ -941,7 +965,211 @@
    "cell_type": "markdown",
    "id": "a8b81a06",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Setting our reporters\n",
+    "\n",
+    "Next we set MultistateReporters which will track the system's positions and\n",
+    "energies during the simulations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "9668e896",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:\tWarning: The openmmtools.multistate API is experimental and may change in future releases\n",
+      "WARNING:\tWarning: The openmmtools.multistate API is experimental and may change in future releases\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Next we set our multi state reporter\n",
+    "from openmmtools.multistate import MultiStateReporter\n",
+    "\n",
+    "# Create a reporter for both the complex and solvent phases\n",
+    "selection_indices = hybrid_complex_factory.hybrid_topology.select('all')\n",
+    "complex_reporter = MultiStateReporter('complex-rbfe.nc',\n",
+    "                                      analysis_particle_indices=selection_indices,\n",
+    "                                      checkpoint_interval=100)\n",
+    "\n",
+    "selection_indices = hybrid_solvent_factory.hybrid_topology.select('all')\n",
+    "solvent_reporter = MultiStateReporter('solvent-rbfe.nc',\n",
+    "                                      analysis_particle_indices=selection_indices,\n",
+    "                                      checkpoint_interval=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "363d9070",
+   "metadata": {},
+   "source": [
+    "### Creating our samplers\n",
+    "\n",
+    "We can next create Replica Exchange samplers for each of our phases.\n",
+    "\n",
+    "Note: HybridRepexSampler is adapted from Perses. We are planning to move this\n",
+    "adapted tooling to openmmtools eventually."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "bf378038",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:\tWarning: The openmmtools.multistate API is experimental and may change in future releases\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please cite the following:\n",
+      "\n",
+      "        Friedrichs MS, Eastman P, Vaidyanathan V, Houston M, LeGrand S, Beberg AL, Ensign DL, Bruns CM, and Pande VS. Accelerating molecular dynamic simulations on graphics processing unit. J. Comput. Chem. 30:864, 2009. DOI: 10.1002/jcc.21209\n",
+      "        Eastman P and Pande VS. OpenMM: A hardware-independent framework for molecular simulations. Comput. Sci. Eng. 12:34, 2010. DOI: 10.1109/MCSE.2010.27\n",
+      "        Eastman P and Pande VS. Efficient nonbonded interactions for molecular dynamics on a graphics processing unit. J. Comput. Chem. 31:1268, 2010. DOI: 10.1002/jcc.21413\n",
+      "        Eastman P and Pande VS. Constant constraint matrix approximation: A robust, parallelizable constraint method for molecular simulations. J. Chem. Theor. Comput. 6:434, 2010. DOI: 10.1021/ct900463w\n",
+      "        Chodera JD and Shirts MR. Replica exchange and expanded ensemble simulations as Gibbs multistate: Simple improvements for enhanced mixing. J. Chem. Phys., 135:194110, 2011. DOI:10.1063/1.3660669\n",
+      "        \n"
+     ]
+    }
+   ],
+   "source": [
+    "# First deal with the complex phase\n",
+    "\n",
+    "# We Get the platform and context caches\n",
+    "from utils import compute\n",
+    "from openmmtools import mcmc, cache\n",
+    "from utils.multistate import HybridRepexSampler\n",
+    "\n",
+    "platform = compute.get_openmm_platform()\n",
+    "comp_energy_context_cache = cache.ContextCache(capacity=None, time_to_live=None, \n",
+    "                                               platform=platform)\n",
+    "comp_sampler_context_cache = cache.ContextCache(capacity=None, time_to_live=None,\n",
+    "                                                platform=platform)\n",
+    "\n",
+    "# Then create the integrator - 2fs + 1 collion per ps, Swap every 5 ps\n",
+    "integrator = mcmc.LangevinSplittingDynamicsMove(\n",
+    "                 timestep=0.02,\n",
+    "                 collision_rate=1.0 / unit.picosecond,\n",
+    "                 n_steps=2500,\n",
+    "                 reassign_velocities=True,\n",
+    "                 n_restart_attempts=20, constraint_tolerance=1e-06)\n",
+    "\n",
+    "# Create sampler - see MultistateSampler for default options\n",
+    "# 11 HREX replicas at 298.15 K\n",
+    "complex_sampler = HybridRepexSampler(mcmc_moves=integrator,\n",
+    "                             hybrid_factory=hybrid_complex_factory)\n",
+    "complex_sampler.setup(reporter=complex_reporter, platform=platform,\n",
+    "                      lambda_protocol=lambdas,\n",
+    "                      temperature=298.15 * unit.kelvin, n_replicas=11,\n",
+    "                      endstates=False)\n",
+    "\n",
+    "# Set the context caches\n",
+    "complex_sampler.energy_context_cache = comp_energy_context_cache\n",
+    "complex_sampler.sampler_context_cache = comp_sampler_context_cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "eba22215",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:\tWarning: The openmmtools.multistate API is experimental and may change in future releases\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please cite the following:\n",
+      "\n",
+      "        Friedrichs MS, Eastman P, Vaidyanathan V, Houston M, LeGrand S, Beberg AL, Ensign DL, Bruns CM, and Pande VS. Accelerating molecular dynamic simulations on graphics processing unit. J. Comput. Chem. 30:864, 2009. DOI: 10.1002/jcc.21209\n",
+      "        Eastman P and Pande VS. OpenMM: A hardware-independent framework for molecular simulations. Comput. Sci. Eng. 12:34, 2010. DOI: 10.1109/MCSE.2010.27\n",
+      "        Eastman P and Pande VS. Efficient nonbonded interactions for molecular dynamics on a graphics processing unit. J. Comput. Chem. 31:1268, 2010. DOI: 10.1002/jcc.21413\n",
+      "        Eastman P and Pande VS. Constant constraint matrix approximation: A robust, parallelizable constraint method for molecular simulations. J. Chem. Theor. Comput. 6:434, 2010. DOI: 10.1021/ct900463w\n",
+      "        Chodera JD and Shirts MR. Replica exchange and expanded ensemble simulations as Gibbs multistate: Simple improvements for enhanced mixing. J. Chem. Phys., 135:194110, 2011. DOI:10.1063/1.3660669\n",
+      "        \n"
+     ]
+    }
+   ],
+   "source": [
+    "# And now the solvent phase\n",
+    "\n",
+    "# We get new context caches\n",
+    "solv_energy_context_cache = cache.ContextCache(capacity=None, time_to_live=None, \n",
+    "                                               platform=platform)\n",
+    "solv_sampler_context_cache = cache.ContextCache(capacity=None, time_to_live=None,\n",
+    "                                                platform=platform)\n",
+    "\n",
+    "# Then create the integrator - 2fs + 1 collion per ps, Swap every 5 ps\n",
+    "integrator = mcmc.LangevinSplittingDynamicsMove(\n",
+    "                 timestep=0.02,\n",
+    "                 collision_rate=1.0 / unit.picosecond,\n",
+    "                 n_steps=2500,\n",
+    "                 reassign_velocities=True,\n",
+    "                 n_restart_attempts=20, constraint_tolerance=1e-06)\n",
+    "\n",
+    "# Create sampler - see MultistateSampler for default options\n",
+    "# 11 HREX replicas at 298.15 K\n",
+    "solvent_sampler = HybridRepexSampler(mcmc_moves=integrator,\n",
+    "                                     hybrid_factory=hybrid_solvent_factory)\n",
+    "solvent_sampler.setup(reporter=solvent_reporter, platform=platform,\n",
+    "                      lambda_protocol=lambdas,\n",
+    "                      temperature=298.15 * unit.kelvin, n_replicas=11,\n",
+    "                      endstates=False)\n",
+    "\n",
+    "# Set the context caches\n",
+    "solvent_sampler.energy_context_cache = solv_energy_context_cache\n",
+    "solvent_sampler.sampler_context_cache = solv_sampler_context_cache"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbf05316",
+   "metadata": {},
+   "source": [
+    "### Running the simulations\n",
+    "\n",
+    "Finally we can run our simulations.\n",
+    "\n",
+    "Note: Due to the computational expense of this step we only do a short set of\n",
+    "simulations (1k steps minimisation, 50ps equilibration, 500 ps production).\n",
+    "Ideally these should be _much_ longer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "220fa918",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, sampler in enumerate([complex_sampler, solvent_sampler]):\n",
+    "    print(f\"Step {i}: minimizing\")\n",
+    "    sampler.minimize(max_iterations=10)\n",
+    "\n",
+    "    print(f\"Step {i}: equilibrating\")\n",
+    "    sampler.equilibrate(25)\n",
+    "\n",
+    "    print(f\"Step {i}: production\")\n",
+    "    sampler.equilibrate(25)"
+   ]
   },
   {
    "cell_type": "markdown",
