Add analysis section

--- a/OpenFE_showcase_1_RBFE_of_T4lysozyme.ipynb
+++ b/OpenFE_showcase_1_RBFE_of_T4lysozyme.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "3d89a17c",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,12 +186,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "4096ce97",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from openfe.setup.molecule import Molecule\n",
+    "from openfe.setup import Molecule\n",
     "\n",
     "# Create and SDF supplier\n",
     "# Extract the contents of the sdf file and visualise it\n",
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "5b89da93",
    "metadata": {},
    "outputs": [],
@@ -256,14 +256,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "1c983e93",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ca11226339754317a98f509bdc9f8c65",
+       "model_id": "ebb890c78f1347a6811fe656beb3761b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "ce9c2525",
    "metadata": {},
    "outputs": [
@@ -301,8 +301,8 @@
      "output_type": "stream",
      "text": [
       "molecule 1 smiles:  [H]c1c([H])c([H])c([H])c([H])c1[H]\n",
-      "molecule 2 smiles:  [H]c1c([H])c([H])c(C([H])([H])[H])c([H])c1[H]\n",
-      "map between molecule 1 and 2:  {0: 1, 1: 2, 2: 3, 3: 4, 4: 5, 5: 6, 7: 0, 9: 10, 10: 11, 11: 12}\n"
+      "molecule 2 smiles:  [H]Oc1c([H])c([H])c([H])c([H])c1[H]\n",
+      "map between molecule 1 and 2:  {0: 0, 1: 1, 2: 2, 3: 3, 4: 4, 5: 5, 6: 6, 7: 7, 8: 8, 9: 9, 10: 12, 11: 11}\n"
      ]
     }
    ],
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "cdcfae45",
    "metadata": {},
    "outputs": [],
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "d8d1617d",
    "metadata": {},
    "outputs": [],
@@ -403,14 +403,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "id": "0b6c9ec3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a961a19ef8e4a08839028753c5df41b",
+       "model_id": "a0675999e348403eafc19bf0ecd5a27c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "630460f7f6d6448fa35545520a453ed3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -442,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "id": "23b778d6",
    "metadata": {},
    "outputs": [],
@@ -467,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "id": "fc56fd9b",
    "metadata": {},
    "outputs": [],
@@ -509,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "id": "7337637c",
    "metadata": {},
    "outputs": [
@@ -573,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "id": "87913c34",
    "metadata": {},
    "outputs": [],
@@ -629,22 +641,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "id": "c0d5d020",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import setup\n",
+    "from utils import topologyhelpers\n",
     "\n",
     "# Essentially we remove the benzene residue from the old topology and graft\n",
     "# in the new phenol residue\n",
-    "new_complex_topology = setup.append_new_topology_item(old_complex_topology,\n",
-    "                                                      phenol_top.to_openmm(),\n",
-    "                                                      exclude_residue_name=\"benzene\")\n",
+    "new_complex_topology = topologyhelpers.append_new_topology_item(\n",
+    "                           old_complex_topology, phenol_top.to_openmm(),\n",
+    "                           exclude_residue_name=\"benzene\")\n",
     "\n",
-    "new_solvent_topology = setup.append_new_topology_item(old_solvent_topology,\n",
-    "                                                      phenol_top.to_openmm(),\n",
-    "                                                      exclude_residue_name=\"benzene\")"
+    "new_solvent_topology = topologyhelpers.append_new_topology_item(\n",
+    "                           old_solvent_topology, phenol_top.to_openmm(),\n",
+    "                           exclude_residue_name=\"benzene\")"
    ]
   },
   {
@@ -658,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
    "id": "add5624b",
    "metadata": {},
    "outputs": [
@@ -716,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 15,
    "id": "3b6adbbd",
    "metadata": {},
    "outputs": [
@@ -733,22 +745,22 @@
     "# Reminder: the mapping is stored in the edge benz_to_phenol\n",
     "\n",
     "# Get mappings between the old and new complex systems\n",
-    "complex_mappings = setup.get_system_mappings(benz_to_phenol.mol1_to_mol2,\n",
-    "                                             old_complex_system,\n",
-    "                                             old_complex_topology, \"benzene\",\n",
-    "                                             new_complex_system,\n",
-    "                                             new_complex_topology, \"phenol\",\n",
-    "                                             fix_constraints=False,\n",
-    "                                             remove_element_changes=True)\n",
+    "complex_mappings = topologyhelpers.get_system_mappings(benz_to_phenol.mol1_to_mol2,\n",
+    "                                                       old_complex_system,\n",
+    "                                                       old_complex_topology, \"benzene\",\n",
+    "                                                       new_complex_system,\n",
+    "                                                       new_complex_topology, \"phenol\",\n",
+    "                                                       fix_constraints=False,\n",
+    "                                                       remove_element_changes=True)\n",
     "\n",
     "# And the mappings between the old and new solvent systems\n",
-    "solvent_mappings = setup.get_system_mappings(benz_to_phenol.mol1_to_mol2,\n",
-    "                                             old_solvent_system,\n",
-    "                                             old_solvent_topology, \"benzene\",\n",
-    "                                             new_solvent_system,\n",
-    "                                             new_solvent_topology, \"phenol\",\n",
-    "                                             fix_constraints=False,\n",
-    "                                             remove_element_changes=True)"
+    "solvent_mappings = topologyhelpers.get_system_mappings(benz_to_phenol.mol1_to_mol2,\n",
+    "                                                       old_solvent_system,\n",
+    "                                                       old_solvent_topology, \"benzene\",\n",
+    "                                                       new_solvent_system,\n",
+    "                                                       new_solvent_topology, \"phenol\",\n",
+    "                                                       fix_constraints=False,\n",
+    "                                                       remove_element_changes=True)"
    ]
   },
   {
@@ -772,20 +784,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 16,
    "id": "826b708e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Note we use shift_insert to make sure the phenol is shifted in the same\n",
     "# way we did above to center the coordinates in the box.\n",
-    "new_complex_positions = setup.set_and_check_new_positions(\n",
+    "new_complex_positions = topologyhelpers.set_and_check_new_positions(\n",
     "                            complex_mappings, old_complex_topology,\n",
     "                            new_complex_topology, old_complex_positions,\n",
     "                            insert_positions=phenol_pos,\n",
     "                            shift_insert=np.array([30, 30, 30]))\n",
     "\n",
-    "new_solvent_positions = setup.set_and_check_new_positions(\n",
+    "new_solvent_positions = topologyhelpers.set_and_check_new_positions(\n",
     "                            solvent_mappings, old_solvent_topology,\n",
     "                            new_solvent_topology, old_solvent_positions,\n",
     "                            insert_positions=phenol_pos,\n",
@@ -808,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 17,
    "id": "509ea59a",
    "metadata": {},
    "outputs": [
@@ -868,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 18,
    "id": "1d59f82e",
    "metadata": {},
    "outputs": [
@@ -878,7 +890,7 @@
        "9"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -933,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 19,
    "id": "9a780811",
    "metadata": {},
    "outputs": [
@@ -974,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 20,
    "id": "9668e896",
    "metadata": {},
    "outputs": [
@@ -1018,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 21,
    "id": "bf378038",
    "metadata": {},
    "outputs": [
@@ -1060,7 +1072,7 @@
     "\n",
     "# Then create the integrator - 2fs + 1 collion per ps, Swap every 5 ps\n",
     "integrator = mcmc.LangevinSplittingDynamicsMove(\n",
-    "                 timestep=0.02,\n",
+    "                 timestep=0.02 * unit.femtoseconds,\n",
     "                 collision_rate=1.0 / unit.picosecond,\n",
     "                 n_steps=2500,\n",
     "                 reassign_velocities=True,\n",
@@ -1082,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 22,
    "id": "eba22215",
    "metadata": {},
    "outputs": [
@@ -1119,7 +1131,7 @@
     "\n",
     "# Then create the integrator - 2fs + 1 collion per ps, Swap every 5 ps\n",
     "integrator = mcmc.LangevinSplittingDynamicsMove(\n",
-    "                 timestep=0.02,\n",
+    "                 timestep=0.02 * unit.femtoseconds,\n",
     "                 collision_rate=1.0 / unit.picosecond,\n",
     "                 n_steps=2500,\n",
     "                 reassign_velocities=True,\n",
@@ -1149,26 +1161,35 @@
     "Finally we can run our simulations.\n",
     "\n",
     "Note: Due to the computational expense of this step we only do a short set of\n",
-    "simulations (1k steps minimisation, 50ps equilibration, 500 ps production).\n",
-    "Ideally these should be _much_ longer."
+    "simulations (1k steps minimisation, 1 * 5ps equilibration,\n",
+    "2 * 5 ps production). Ideally these should be _much_ longer."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "220fa918",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 0: minimizing\n",
+      "Step 0: equilibrating\n"
+     ]
+    }
+   ],
    "source": [
     "for i, sampler in enumerate([complex_sampler, solvent_sampler]):\n",
     "    print(f\"Step {i}: minimizing\")\n",
     "    sampler.minimize(max_iterations=10)\n",
     "\n",
     "    print(f\"Step {i}: equilibrating\")\n",
-    "    sampler.equilibrate(25)\n",
+    "    sampler.equilibrate(1)\n",
     "\n",
     "    print(f\"Step {i}: production\")\n",
-    "    sampler.equilibrate(25)"
+    "    sampler.equilibrate(2)"
    ]
   },
   {
@@ -1183,7 +1204,10 @@
    "cell_type": "markdown",
    "id": "2accbbd1",
    "metadata": {},
-   "source": []
+   "source": [
+    "Finally now that we've run our simulations, let's go ahead and gather the free\n",
+    "energies for both phases."
+   ]
   },
   {
    "cell_type": "code",
@@ -1191,7 +1215,53 @@
    "id": "acf0a7b4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from openmmtools.multistate import (MultistateReporter,\n",
+    "                                    MultistateSamplerAnalyzer,)\n",
+    "\n",
+    "# Let's load the results from file\n",
+    "# First the complex phase\n",
+    "complex_reporter = MultistateReporter('complex-rbfe.nc')\n",
+    "complex_analyzer = MultistateSamplerAnalyzer(solvent_reporter)\n",
+    "\n",
+    "# Get the free energies and convert to kcal/mol\n",
+    "dG_comp, ddG_comp = complex_analyser.get_free_energy()\n",
+    "dG_comp = dG_comp[0, -1] * complex_analyser.kT\n",
+    "ddG_comp = ddG_comp[0, -1] * complex_analyser.kT\n",
+    "dG_comp = dG_comp.in_units_of(unit.kilocalories_per_mole)\n",
+    "ddG_comp = ddG_comp.in_units_of(unit.kilocalories_per_mole)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63385d85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# And now the solvent phase\n",
+    "solvent_reporter = MultistateReporter('complex-rbfe.nc')\n",
+    "solvent_analyzer = MultistateSamplerAnalyzer(solvent_reporter)\n",
+    "\n",
+    "# Get the free energies and convert to kcal/mol\n",
+    "dG_solv, ddG_solv = solvent_analyser.get_free_energy()\n",
+    "dG_solv = dG_solv[0, -1] * solvent_analyser.kT\n",
+    "ddG_solv = ddG_solv[0, -1] * solvent_analyser.kT\n",
+    "dG_solv = dG_solv.in_units_of(unit.kilocalories_per_mole)\n",
+    "ddG_solv = ddG_solv.in_units_of(unit.kilocalories_per_mole)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd1332db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# And finally we print the free energy differences\n",
+    "print(f\"Complex dG: {dG_comp}, err {ddG_comp}\")\n",
+    "print(f\"Solvent dG: {dG_solv}, err {ddG_solv}\")"
+   ]
   }
  ],
  "metadata": {
