TODO stubs, CLI, viz, serialisation

--- a/OpenFE_showcase_1_RBFE_of_T4lysozyme.ipynb
+++ b/OpenFE_showcase_1_RBFE_of_T4lysozyme.ipynb
@@ -363,10 +363,33 @@
    "id": "8e119e3e",
    "metadata": {},
    "source": [
-    "## Storing the network\n",
+    "### Storing the network\n",
     "\n",
-    "TODO - Add section on write/read of the network"
+    "Once created a network can be stored to disk for..\n",
+    "\n",
+    "TODO - add example of saving and loading a network"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac41ea4d",
+   "metadata": {},
+   "source": [
+    "### The OpenFE CLI\n",
+    "\n",
+    "Add example of mapping\n",
+    "\n",
+    "TODO - we need to get viz up and running so that this has some good visual\n",
+    "impact. Probably can do the JNK1 set from above"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eecd0fea",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
